# errors

./: .README.md  .README.template.md  .clang-uml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: auto_prerelease.yaml  auto_tag_and_release.yaml  checks.yaml
cmake/: GitSemver.cmake  PFL.cmake
docs/: CONTRIBUTING.md  HEADER.md  INSTALL.md  OVERVIEW.md  README.md  README.meta.yaml  README.template.md  REFERENCE.md  TUTORIAL.md  annotated.html  base__error_8hpp_source.html  classerrors_1_1detail_1_1interface-members.html  classerrors_1_1detail_1_1interface.html  classerrors_1_1detail_1_1interface__inherit__graph.map  classerrors_1_1detail_1_1interface__inherit__graph.md5  classerrors_1_1error-members.html  classerrors_1_1error.html  classerrors_1_1error__coll__graph.map  classerrors_1_1error__coll__graph.md5  classerrors_1_1error__inherit__graph.map  classerrors_1_1error__inherit__graph.md5  classerrors_1_1error__ptr-members.html  classerrors_1_1error__ptr.html  classerrors_1_1error__ptr__coll__graph.map  classerrors_1_1error__ptr__coll__graph.md5  classerrors_1_1error__ptr__inherit__graph.map  classerrors_1_1error__ptr__inherit__graph.md5  classerrors_1_1impl_1_1base__error-members.html  classerrors_1_1impl_1_1base__error.html  classerrors_1_1impl_1_1base__error__coll__graph.map  classerrors_1_1impl_1_1base__error__coll__graph.md5  classerrors_1_1impl_1_1base__error__inherit__graph.map  classerrors_1_1impl_1_1base__error__inherit__graph.md5  classerrors_1_1impl_1_1code__error-members.html  classerrors_1_1impl_1_1code__error.html  classerrors_1_1impl_1_1code__error__inherit__graph.map  classerrors_1_1impl_1_1code__error__inherit__graph.md5  classerrors_1_1impl_1_1error__with__cause-members.html  classerrors_1_1impl_1_1error__with__cause.html  classerrors_1_1impl_1_1error__with__cause__coll__graph.map  (+120 more)
docs/diagrams/: errors.puml
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js
examples/advanced-usage/: CMakeLists.txt  README.md
examples/advanced-usage/src/: main.cpp
examples/basic-usage/: CMakeLists.txt  README.md
examples/basic-usage/src/: main.cpp
examples/customize-format-global/: CMakeLists.txt  README.md
examples/customize-format-global/src/: main.cpp
examples/customize-format-local/: CMakeLists.txt  README.md
examples/customize-format-local/src/: main.cpp
examples/error-handling/: CMakeLists.txt  README.md
examples/error-handling/src/: main.cpp
examples/print-messages/: CMakeLists.txt
examples/print-messages/src/: main.cpp
examples/use-with-expected/: CMakeLists.txt  README.md
examples/use-with-expected/src/: main.cpp
include/errors/: config.hpp.in  error.hpp  error_ptr.hpp  errors.hpp  json.hpp  make.hpp  source_location.hpp  utils.hpp  version.hpp  wrap.hpp
include/errors/detail/: interface.hpp
include/errors/impl/: base_error.hpp  code_error.hpp  error_with_cause.hpp  error_without_cause.hpp  exception_error.hpp  runtime_error.hpp  system_error.hpp  wrap_error.hpp
misc/: errors.hpp.in
reference/: annotated.html  base__error_8hpp_source.html  classerrors_1_1detail_1_1interface-members.html  classerrors_1_1detail_1_1interface.html  classerrors_1_1detail_1_1interface__inherit__graph.map  classerrors_1_1error-members.html  classerrors_1_1error.html  classerrors_1_1error__coll__graph.md5  classerrors_1_1error__ptr-members.html  classerrors_1_1error__ptr.html  classerrors_1_1error__ptr__coll__graph.map  classerrors_1_1error__ptr__coll__graph.md5  classerrors_1_1error__ptr__inherit__graph.map  classerrors_1_1impl_1_1base__error-members.html  classerrors_1_1impl_1_1base__error.html  classerrors_1_1impl_1_1base__error__coll__graph.map  classerrors_1_1impl_1_1base__error__coll__graph.md5  classerrors_1_1impl_1_1code__error-members.html  classerrors_1_1impl_1_1code__error.html  classerrors_1_1impl_1_1code__error__coll__graph.md5  classerrors_1_1impl_1_1error__with__cause-members.html  classerrors_1_1impl_1_1error__with__cause.html  classerrors_1_1impl_1_1error__with__cause__coll__graph.map  classerrors_1_1impl_1_1error__with__cause__coll__graph.md5  classerrors_1_1impl_1_1error__without__cause-members.html  classerrors_1_1impl_1_1error__without__cause.html  classerrors_1_1impl_1_1error__without__cause__inherit__graph.map  classerrors_1_1impl_1_1exception__error-members.html  classerrors_1_1impl_1_1exception__error.html  classerrors_1_1impl_1_1runtime__error-members.html  classerrors_1_1impl_1_1runtime__error.html  classerrors_1_1impl_1_1runtime__error__coll__graph.map  classerrors_1_1impl_1_1runtime__error__coll__graph.md5  classerrors_1_1impl_1_1system__error-members.html  classerrors_1_1impl_1_1system__error.html  classerrors_1_1impl_1_1system__error__coll__graph.md5  classerrors_1_1impl_1_1system__error__inherit__graph.map  classerrors_1_1impl_1_1wrap__error-members.html  classerrors_1_1impl_1_1wrap__error.html  classerrors_1_1impl_1_1wrap__error__coll__graph.md5  (+58 more)
reference/search/: all_2.js  all_3.js  all_9.js  classes_6.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_1.js  variables_2.js
src/errors/: config.cpp  error.cpp  error_ptr.cpp  errors.cpp  json.cpp  make.cpp  source_location.cpp  utils.cpp  version.cpp  wrap.cpp
src/errors/detail/: interface.cpp
src/errors/impl/: base_error.cpp  code_error.cpp  error_with_cause.cpp  error_without_cause.cpp  exception_error.cpp  runtime_error.cpp  system_error.cpp  wrap_error.cpp
tests/errors-unit-tests/: CMakeLists.txt
tests/errors-unit-tests/src/: common_error.cpp  custom_error.cpp  source_location.cpp
tools/: amalgamate.py  errors.json  generate-coverage.sh  generate-readme.sh  generate-reference-documentation.sh  generate-release-assets.sh  get-project-version.sh  utils.sh
